# SimpleElastix

./: CMakeLists.txt  README.md  SimpleElastixConfig.cmake.in  UseSimpleElastix.cmake.in
CMake/: sitkAddTest.cmake
Elastix/include/: sitkElastixImageFilter.h  sitkPixelIDTypeListsElastix.h  sitkPixelIDValuesElastix.h  sitkTransformConverter.h  sitkTransformixImageFilter.h
Elastix/src/: CMakeLists.txt  sitkElastixImageFilter.cxx  sitkElastixImageFilterImpl.cxx  sitkElastixImageFilterImpl.h  sitkPixelIDValuesElastix.cxx  sitkTransformConverter.cxx  sitkTransformConverterImpl.cxx  sitkTransformConverterImpl.h  sitkTransformixImageFilterImpl.cxx
Examples/: CMakeLists.txt  elx.cxx  tfx.cxx
Examples/CSharp/: CMakeLists.txt
Examples/ITKIntegration/: CMakeLists.txt
Examples/Python/: CMakeLists.txt
ITK/: CMakeLists.txt  sitkMultiImageRegistration.cxx  sitkMultiImageRegistration.h
SuperBuild/: CMakeLists.txt  External_SimpleITK.cmake  SuperBuild.cmake
Wrapping/Common/: SimpleElastix_Common.i
Wrapping/Python/: CMakeLists.txt  LegacyPackaging.cmake  Python.i  SimpleElastix.i
Wrapping/Python/Packaging/: __init__.py  setup.py.in
